remove align-items bug

--- a/webpack/postcss/navbar.css
+++ b/webpack/postcss/navbar.css
@@ -6,15 +6,14 @@
 }
 
 .navbar {
-  height: var(--navbar-height);
-  width: 100%;
+  max-height: var(--navbar-height);
+  max-width: 100%;
 
   &__order {
     order: 1;
   }
 
   &--flex {
-    align-items: baseline;
     flex-flow: row wrap;
   }
 }
